# IAV

./: .gitignore  HARDWARE.md  LICENSE  LICENSE.md  README.md  UAV_PRODUCTION_PLAN.md  activate-pixi.sh  main.py  pixi.toml  pyproject.toml  test_huggingface_integration.py  test_vla_integration.py  todo.md  uv.lock.backup
config/: minimal_config.json  system_config.json
examples/: huggingface_basic_usage.py
max-project/: pixi.toml
scripts/: build.sh  deploy.sh  dev_setup.sh  setup-unified.sh  test.sh
src/: __init__.py
src/core/: autonomous_system.py  camera.py  drone_control.py  unified_drone_control.py
src/mojo/: __init__.mojo  camera_bridge.mojo  control_allocator.mojo  control_system.mojo  drone_core.mojo  enhanced_file_io.mojo  enhanced_system_lib.mojo  file_io.mojo  file_io_simple.mojo  math_utils.mojo  network_bridge.mojo  safety_monitor.mojo  safety_validator.mojo  stdlib_test.mojo  stdlib_working_test.mojo  system_utils.mojo  system_utils_simple.mojo  test_libraries.mojo  uav_core.mojo  vision_pipeline.mojo  vla_inference.mojo  working_enhanced_lib.mojo
src/python/: final_mojo_interface.py  language_processor.py  mavlink_interface.py  minimal_interface.py  mojo_bridge.py  mojo_integrated_interface.py  mojo_interface.py  mojo_wrapper.py  system_orchestrator.py  vision_pipeline.py
src/safety/: validator.py
src/vision/: object_actions.py
tests/: test_basic_functionality.py  test_integration.py  test_minimal_interface.py  test_mojo_integration.py  test_streamlined.py  test_unified_system.py
tests/mojo/: test_control_system.mojo  test_safety_validator.mojo
